PEP8 Compliance in all modules!!!
Refactorings:
  - Fixed up treefunc_to_brackets and multiset_funcstructs for increased clarity
  - Added docstrings for funcstruct_degeneracy and multiset_funcstructs and nestops.

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ Module.symvers
 # git files that we don't want to ignore even it they are dot-files
 #
 !.gitignore
+!.gitmodules
 !.mailmap
 
 *.orig
