Began levypartitions.c with working ones_count.

--- a/speedyfuncs/Makefile
+++ b/speedyfuncs/Makefile
@@ -1,7 +1,9 @@
 CFLAGS=-Wall -g
 
-all: rootedtrees
+all: rootedtrees levypartitions
 
 clean:
 	rm -f rootedtrees
 	rm -rf rootedtrees.dSYM
+	rm -f levypartitions
+	rm -rf levypartitions.dSYM
