--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-#
 # NOTE! Don't add files that are generated in specific
 # subdirectories here. Add them in the ".gitignore" file
 # in that subdirectory instead.
@@ -6,26 +5,25 @@
 # NOTE! Please use 'git ls-files -i --exclude-standard'
 # command after changing this file, to see if there are
 # any tracked files which get ignored after the change.
-#
-# Normal rules
-#
+
+#### Generic ####
 .*
-*.pyc
-*.pyo
 
-#
-# git files that we don't want to ignore even it they are dot-files
-#
-!.gitignore
-!.gitmodules
-!.mailmap
-
+#### Editor tempfiles ####
 *.orig
 *~
 \#*#
 
-# Local folders
-/myrefs/
+#### Python files ####
+*.pyc
+*.pyo
 __pycache__/
+
+#### git files that we don't want to ignore even it they are dot-files ####
+!.gitignore
+!.gitmodules
+!.mailmap
+
+#### Personal files ####
+/myrefs/
 /untracked/
-/funcgraphs/images/
